# kime-copr

./: build.sh  kime.spec
kime-3.1.1/: Cargo.toml  README.ko.md  README.md  default.nix  flake.nix  shell.nix
kime-3.1.1/.github/workflows/: ci.yaml  release.yaml
kime-3.1.1/docs/: CHANGELOG.md
kime-3.1.1/nix/: deps.nix
kime-3.1.1/src/engine/backends/hangul/src/: lib.rs
kime-3.1.1/src/engine/cffi/: Cargo.toml  build.rs
kime-3.1.1/src/engine/config/src/: lib.rs
kime-3.1.1/src/engine/core/tests/: emoji.rs
kime-3.1.1/src/engine/dict/: Cargo.toml  build.rs
kime-3.1.1/src/frontends/qt5/src/: input_context.cc
kime-3.1.1/src/frontends/wayland/: Cargo.toml
kime-3.1.1/src/frontends/wayland/src/: input_method_v2.rs
test/: kime-test.spec
